--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div class="rowFive">
                     <button class="key"onclick="uploadToShowScreen('0')"> 0 </button>
-                    <button class="key"onclick="clearShowScreen()"> CLR </button>
+                    <button class="key"id="clr" onclick="clearShowScreen()"> CLR </button>
                     <button class="key"onclick="uploadToShowScreen('+')"> + </button>
                     <button class="key"onclick="splitInput()"> = </button>
             </div>
